ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - AWStats:                                              |
|               * gui: disable stats-alias in client menu         |
\_________________________________________________________________/

2007-08-12 Raphael Geissert
    - GUI:
        * Fixed #558: bruteforce protection is bogus
        * Fixed #552: wrong data in domain counters in reseller page
        * Fixed several errors in domain syntax checks
    - ENGINE:
        * Fixed #559: error in /etc/courier/userdb home path for subdomains

2007-08-06 Benedikt Heintel
	- ENGINE:
		* Fixed #548: engine/Makefile - Spaces instead of tab
	- SETUP:
		* changed: style of install (only graphical)

2007-08-04 Raphael Geissert
	- GUI:
		* Fixed #544: Wrong display of special characters of domain names in some pages

2007-08-02 Raphael Geissert
	- ENGINE:
		* Creation of domain index page now decodes ACE domain names

2007-08-01 Raphael Geissert
	- GUI:
		* Fixed some issues with create_catchall.php

2007-07-31 Raphael Geissert
	- GUI:
		* Fixed #539: Undefined variable: total_mails
		* Removed hardcoded path in include/ispcp-lib.php
		* Re-enabled lock file check
	- CONFIGS:
		* Added status target to ispcp_network
	- ENGINE:
		* Fixed lock file location

2007-07-30 Raphael Geissert
	- GUI:
		* Fixed #538: who_owns_this' ftp_user next check was calling dmn instead of uid
	- CONFIGS:
		* Fixed #536: Error: bad username; while reading /etc/cron.d/ispcp
	- ENGINE:
		* Added initial custom cronjobs support

2007-07-29 Raphael Geissert
	- GUI:
		* Fixed #527, #528, #529, #530: Undefined index: layout_id in gui/client/*.php

2007-07-28 Raphael Geissert
	- GUI:
		* Fixed #526: Undefined index: layout_id in gui/client/*.php
		* Fixed #525: Wrong email validation in gui/orderpanel/address.php