@@ -1,0 +1,109 @@
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset={THEME_CHARSET}">
+<title>{TR_EDIT_ALIAS_PAGE_TITLE}</title>
+  <meta name="robots" content="noindex">
+  <meta name="robots" content="nofollow">
+<link href="{THEME_COLOR_PATH}/css/ispcp.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="{THEME_COLOR_PATH}/css/ispcp.js"></script>
+<script language="JavaScript" type="text/JavaScript">
+<!--
+
+function MM_goToURL() { //v3.0
+  var i, args=MM_goToURL.arguments; document.MM_returnValue = false;
+  for (i=0; i<(args.length-1); i+=2) eval(args[i]+".location='"+args[i+1]+"'");
+}
+//-->
+</script>
+</head>
+<body onLoad="MM_preloadImages('{THEME_COLOR_PATH}/images/icons/database_a.gif','{THEME_COLOR_PATH}/images/icons/hosting_plans_a.gif','{THEME_COLOR_PATH}/images/icons/domains_a.gif','{THEME_COLOR_PATH}/images/icons/general_a.gif' ,'{THEME_COLOR_PATH}/images/icons/manage_users_a.gif','{THEME_COLOR_PATH}/images/icons/webtools_a.gif','{THEME_COLOR_PATH}/images/icons/statistics_a.gif','{THEME_COLOR_PATH}/images/icons/support_a.gif')">
+<!-- BDP: logged_from --><table width="100%"  border="0" cellspacing="0" cellpadding="0">
+      <tr>
+        <td height="20" nowrap background="{THEME_COLOR_PATH}/images/button.gif">&nbsp;&nbsp;&nbsp;<a href="change_user_interface.php?action=go_back"><img src="{THEME_COLOR_PATH}/images/icons/close_interface.png" width="18" height="18" border="0" align="absmiddle"></a> <font color="red">{YOU_ARE_LOGGED_AS}</font> </td>
+      </tr>
+    </table>
+	<!-- EDP: logged_from -->
+<table width="100%" border="0" cellspacing="0" cellpadding="0" height="100%" style="border-collapse: collapse;padding:0;margin:0;">
+	<tr>
+		<td align="left" valign="top" style="vertical-align: top; width: 195px; height: 56px;"><img src="{THEME_COLOR_PATH}/images/top/top_left.jpg" border="0"></td>
+		<td style="height: 56px; width: 617px;"><img src="{THEME_COLOR_PATH}/images/top/top_left_bg.jpg" border="0"></td>
+		<td style="width:100%; background-image: url({THEME_COLOR_PATH}/images/top/top_bg.jpg)">&nbsp;</td>
+		<td style="width: 73px; height: 56px;"><img src="{THEME_COLOR_PATH}/images/top/top_right.jpg" border="0"></td>
+	</tr>
+	<tr>
+		<td style="width: 195px; vertical-align: top;">{MENU}</td>
+	    <td colspan=3 style="vertical-align: top;"><table style="width: 100%; border-collapse: collapse;padding:0;margin:0;">
+          <tr height="95";>
+            <td style="padding-left:30px; width: 100%; background-image: url({THEME_COLOR_PATH}/images/top/middle_bg.jpg);">{MAIN_MENU}</td>
+            <td style="padding:0;margin:0;text-align: right; width: 73px;vertical-align: top;"><img src="{THEME_COLOR_PATH}/images/top/middle_right.jpg" border="0"></td>
+          </tr>
+          <tr height="*">
+            <td colspan=3><table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tr>
+                <td align="left"><table width="100%" cellpadding="5" cellspacing="5">
+                    <tr>
+                      <td width="25"><img src="{THEME_COLOR_PATH}/images/content/table_icon_domains.png" width="25" height="25"></td>
+                      <td colspan="2" class="title">{TR_MANAGE_DOMAIN_ALIAS}</td>
+                    </tr>
+                </table></td>
+                <td width="27" align="right">&nbsp;</td>
+              </tr>
+              <tr>
+                <td><form name="edit_alias_frm" method="post" action="edit_alias.php?edit_id={ID}">
+                    <table width="100%" cellpadding="5" cellspacing="5">
+                      <tr>
+                        <td width="25">&nbsp;</td>
+                        <td colspan="2" class="content3"><b>{TR_EDIT_ALIAS}</b></td>
+                      </tr>
+                      <!-- BDP: page_message -->
+                      <tr>
+                        <td>&nbsp;</td>
+                        <td colspan="2" class="title"><font color="#FF0000">{MESSAGE}</font></td>
+                      </tr>
+                      <!-- EDP: page_message -->
+                      <tr>
+                        <td width="25">&nbsp;</td>
+                        <td width="200" class="content2">{TR_ALIAS_NAME}</td>
+                        <td class="content">{ALIAS_NAME} </td>
+                      </tr>
+                      <tr>
+                        <td width="25">&nbsp;</td>
+                        <td class="content2">{TR_DOMAIN_IP}</td>
+                        <td class="content">{DOMAIN_IP}</td>
+                      </tr>
+                      <tr>
+                        <td width="25">&nbsp;</td>
+                        <td width="200" class="content2" style="vertical-align:top;">{TR_ENABLE_FWD}</td>
+                        <td class="content">
+                            <input type="radio" name="status" {CHECK_EN} value="1" /> {TR_ENABLE}<br />
+                            <input type="radio" name="status" {CHECK_DIS} value="0" /> {TR_DISABLE}
+                        </td>
+                      </tr>
+                      <tr>
+                        <td width="25">&nbsp;</td>
+                        <td width="200" class="content2">{TR_FORWARD}</td>
+                        <td class="content"><input name="forward" type="text" class="textinput" id="forward" style="width:210px" value="{FORWARD}"></td>
+                      </tr>
+                      <tr>
+                        <td width="25">&nbsp;</td>
+                        <td colspan="2"><input name="Submit" type="submit" class="button" value="  {TR_MODIFY}  ">
+                          &nbsp;&nbsp;&nbsp;
+                          <input name="Submit" type="submit" class="button" onClick="MM_goToURL('parent','domain_alias.php');return document.MM_returnValue" value=" {TR_CANCEL} "></td>
+                      </tr>
+                    </table>
+                  <input type="hidden" name="uaction" value="modify">
+                </form></td>
+                <td>&nbsp;</td>
+              </tr>
+              <tr>
+                <td>&nbsp;</td>
+                <td>&nbsp;</td>
+              </tr>
+            </table></td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+</table>
+</body>
+</html>
